--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ htmlcov/
 .vscode/
 
 # devcontainer files
-*.devcontainer/devcontainer.json
+#*.devcontainer/devcontainer.json
 
 # Docker-specific files
 docker-compose.override.yml
