--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ comm==0.2.2
 contourpy==1.3.0
 cryptography==43.0.3
 cycler==0.12.1
+dash==2.18.2
 debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
