trying to fix not rendered parts33

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
 title: MLM-IV Documentation
 show_downloads: true
 theme: jekyll-theme-minimal
-mathjax: true
+
 plugins:
   - jekyll-mathjax
 
 
-
+usemathjax: true
