trying to fix not rendered parts43

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,38 @@ title: MLM-IV Documentation
 show_downloads: true
 theme: jekyll-theme-minimal
 
+# Set this to true to get LaTeX math equation support
+use_math: true
+# this setting allows you to keep pages organized in the _pages folder
+include:
+  - _pages
+
+# Everything below here should be left alone. Modifications may break fastpages
+future: true
+
+
 plugins:
-  - jekyll-mathjax
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-octicons
+  - jekyll-toc
+  - jekyll-twitter-plugin
+  - jekyll-relative-links
+  - jekyll-seo-tag
+  - jekyll-remote-theme
 
+remote_theme: jekyll/minima
 
+titles_from_headings:
+  enabled: true
+  strip_title: true
+  collections: true
+
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  math_engine: katex
+  input: GFM
+  auto_ids: true
+  hard_wrap: false
+  syntax_highlighter: rouge
