--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: MLM-IV Documentation
 show_downloads: true
-theme: jekyll-theme-Minima
+theme: jekyll-theme-modernist
 markdown: kramdown
 plugins:
   - jekyll-mathjax
