update for math rendering

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,3 +19,7 @@ url: "https://gnacode.github.io"
 
 kramdown:
   input: GFM
+
+mathjax:
+  # Optional: MathJax configurations for rendering
+  config: "TeX-MML-AM_CHTML"
