trying slate theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: MLM-IV Documentation
 show_downloads: true
-theme: jekyll-theme-minima
+theme: jekyll-theme-slate
 markdown: kramdown
 
 # Adding Jekyll plugins
